<?xml version="1.0"?>
<package format="2">
  <name>wp5_ros_interface</name>
  <version>0.0.0</version>
  <description>The ros interface package</description>

  <maintainer email="lmunier@protonmail.com">Louis Munier</maintainer>
  <maintainer email="tristan_bonato@hotmail.com">Tristan Bonato</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>wp5_common_utilities</depend>
</package>